@@ -218,6 +218,25 @@ modparam("osp", "sp1_uri", "http://osptestserver.transnexus.com:5045/osp")
 # modparam("osp", "append_networkid", 1)
 
 #
+# Destination Network ID Location
+# ====================================================================
+# This parameter is used to tell the OSP module where the destination
+# network ID should be appended. If it is set to 0, network ID is
+# appended as URI-parameter. If it is set to 1, network ID is appended
+# as user-parameter. The default value is 0.
+#
+# modparam("osp", "networkid_location", 0)
+
+#
+# Destination Network ID Parameter Name
+# ====================================================================
+# This parameter is used to tell the OSP module the parameter name
+# that is used to carry destination network ID.  The default value is
+# "networkid".
+#
+# modparam("osp", "networkid_parameter", "networkid")
+
+#
 # Source Device IP AVP
 # ====================================================================
 # This parameter is used to tell the OSP module which AVP is used to
